[package]
name = "rustlib"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_bytes_api"
crate-type = ["cdylib"]

[dependencies]
uuid = {version = "1.16.0", features = ["v4", "serde"]}
rkyv = {version = "0.8.10", features = ["bytecheck", "alloc"]}
rancor = "0.1.0"
serde = {version = "1.0.215", features = ["derive"]}
serde_json = "1.0"
libc = "0.2"
